--- a/.dist/index.html
+++ b/.dist/index.html
@@ -18,7 +18,7 @@
 <body>
     <!--use the BEN system-->
     <header class="header">
-        <div class="header__logo-box"><img src="img/gbg_int_li_cmyk_neg.png" alt="Logo" class="header__logo"></div>
+        <div class="header__logo-box"><img src="img/logo-white.png" alt="Logo" class="header__logo"></div>
         <div class="header__text-box">
             <!--standalone block-->
             <h1 class="heading-primary">
@@ -305,8 +305,39 @@
                 </div>
             </div>
         </section>
-
     </main>
+    <!--FOOTER-->
+    <footer class="footer">
+        <div class="footer__logo-box">
+            <img src="img/logo.png" alt="logo blue" class="footer__logo">
+        </div>
+        <div class="row">
+            <div class="col-1-of-2">
+                <div class="footer__navigation">
+                    <ul class="footel__list">
+                        <li class="footer__item">
+                            <a href="#" class="footer__link">About Us</a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#" class="footer__link">Contact Us</a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#" class="footer__link">Work with Us</a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#" class="footer__link">Privacy Policy</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+            <div class="col-1-of-2">
+                <p class="footer__copyright">
+                    <a href="#" class="footer__copyright__link">Manele Solutions web development </a><br>Copyright &copy Manele Solutions. <br> Design by Jonas Schmedtmann
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
